Fix remaining issues